Closed
Bug 399406
Opened 18 years ago
Closed 18 years ago
Regression in old OJI LiveConnect functionality
Categories
(Core Graveyard :: Java: Live Connect, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: kbrussel, Assigned: jst)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
|
2.28 KB,
application/zip
|
Details | |
|
3.09 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
sicking
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a9pre) Gecko/2007101005 Minefield/3.0a9pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a9pre) Gecko/2007101005 Minefield/3.0a9pre
The linked test case indicates a regression in the old OJI-based LiveConnect functionality with the latest patch for 393928. The Java Plug-In fails to fetch the JSObject corresponding to the document's window.
Reproducible: Always
Steps to Reproduce:
1. Download and unzip linked test case.
2. Install JRE 6u3 from http://java.sun.com/javase/downloads/index.jsp
3. Open the Java Control Panel, go to the Advanced Tab, Java Console tree, and select Show Console. Close the Java Control Panel.
4. Navigate to the enclosed JavaJSTest1.html and watch the Java Console for output. With FF 2, the test will run and print "TEST FAILED" to the console. With the latest FF 3, it will throw a JSException early on.
Actual Results:
Test fails to start.
Expected Results:
Test runs (though fails due to bugs in the old OJI-based Java Plug-In).
| Reporter | ||
Comment 1•18 years ago
|
||
Comment 2•18 years ago
|
||
Confirming this. I am unable to login to any sites that use liveconnect.
Status: UNCONFIRMED → NEW
Component: General → Java: Live Connect
Ever confirmed: true
Product: Firefox → Core
Version: unspecified → Trunk
Updated•18 years ago
|
Severity: normal → major
Flags: blocking1.9?
Comment 3•18 years ago
|
||
I am not at all sure how this would relate to bug 393928 though. I am unable to log in to liveconnect sites on the current trunk and as far as I can tell, the patch for bug 393928 has not landed.
Comment 4•18 years ago
|
||
Ignore comments 2 and 3. My problem appears to be different. A recent trunk regression appears to have caused Java applets not to work correctly if an http proxy needs to be used. I will file another bug.
Severity: major → normal
Flags: blocking1.9?
Updated•18 years ago
|
QA Contact: general → live-connect
Comment 5•18 years ago
|
||
Well I guess comment #2 was correct after all. It is comment #3 and comment #4 that should be ignored.
My proxy issue was that one of my test machines had incorrect settings for java proxies.
And it appears that code for bug 393928 has been checked in and I verified that it is the casue of this issue.
I cannot log into any sites using liveconnect, nor can I connect to sametime meetings. Fails with or without proxies despite what I said in comment #3.
For a test you can visit:
http://sametime.psclistens.com/stconf.nsf/WebTestMeeting?OpenForm
and click on "Test my Browser"
| Assignee | ||
Comment 6•18 years ago
|
||
So the patch that broke this (bug 393928) made it so that we lazily initialize LiveConnect when needed by script on the page, but if failed to do the same when loading an applet which can also use LiveConnect when accessing JS objects in the containing page. This patch makes is so that we initialize LiveConnect also when loading an applet (unless a Java plugin that supports NPRuntime is installed on the system).
This also fixes a crash in LiveConnect (debug only, potentially) due to missing JS_Begin/EndRequest calls when calling the JS engine API.
Assignee: nobody → jst
Status: NEW → ASSIGNED
Attachment #284697 -
Flags: superreview?(jonas)
Attachment #284697 -
Flags: review?(jonas)
Attachment #284697 -
Flags: approval1.9?
Attachment #284697 -
Flags: superreview?(jonas)
Attachment #284697 -
Flags: superreview+
Attachment #284697 -
Flags: review?(jonas)
Attachment #284697 -
Flags: review+
Attachment #284697 -
Flags: approval1.9?
Attachment #284697 -
Flags: approval1.9+
Oh, but please fix the spelling of 'Mozilla' ;)
| Assignee | ||
Comment 8•18 years ago
|
||
Fix checked in, with typo fixed. Kenneth et all, please help test this beyond just the attached testcase if you have a chance.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 9•18 years ago
|
||
Actually I already tested this with my own build on the sametime test site I mentioned in comment #5. I also verified that I can once again log in to https://certadmin.entrust.com. I tested with both windows and Linux.
I will do more testing to make sure nothing else broke, but the 2 things I had found to be broken work with this patch installed.
You need to log in
before you can comment on or make changes to this bug.
Description
•