Fixing bug 399406. Make sure to initialize LiveConnect (if needed) when loading applets. r+sr+a=jonas@sicking.cc